test/invalid/baseline/extattr-double-field.txt
Syntax error at line 2 in extattr-double-field.webidl, since `dictionary Foo`:
  [Clamp] [Clamp] unsigned long
          ^ Illegal double extended attribute lists, consider merging them
